--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.3
+  http_interceptor: ^0.4.1
 
 
   # The following adds the Cupertino Icons font to your application.
