--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   http: ^0.13.3
   http_interceptor: ^0.4.1
+  mobx: ^2.0.1
+  flutter_mobx: ^2.0.0
+  localstorage: ^4.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +37,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.0.4
+  mobx_codegen: ^2.0.1+3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
