--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   mobx: ^2.0.1
   flutter_mobx: ^2.0.0
   localstorage: ^4.0.0+1
-
+  flutter_modular: ^3.2.2+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
